<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:id="@+id/constraintLayout"
                                                   android:layout_height="wrap_content"
                                                   android:background="@drawable/dialog">


    <androidx.appcompat.widget.LinearLayoutCompat
            android:paddingBottom="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            app:cardUseCompatPadding="true"
            android:elevation="0dp"
            android:padding="10dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">


        <GridLayout
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:alignmentMode="alignBounds"
                android:columnCount="2"
                android:rowCount="2"
                android:columnOrderPreserved="false"
                android:useDefaultMargins="true">

            <androidx.cardview.widget.CardView
                    android:layout_width="130dp"
                    android:id="@+id/cardView"
                    android:layout_height="130dp"
                    app:cardCornerRadius="8dp"
                    android:layout_rowSpan="2"
                    android:layout_column="0"
                    android:layout_row="0"
                    app:cardBackgroundColor="@color/colorThird"
                    android:layout_margin="5dp"
                    android:elevation="20dp">

                <com.synnapps.carouselview.CarouselView
                        android:background="@color/colorThird"
                        android:layout_gravity="top"
                        android:id="@+id/carouselView"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        app:fillColor="@color/colorPrimary"
                        app:pageColor="@color/colorThird"
                        app:radius="4dp"
                        app:slideInterval="3000"
                        app:strokeColor="@color/darkGrey"
                        android:scaleType="fitCenter"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax"
                        app:strokeWidth="1dp"/>

            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatTextView android:layout_width="wrap_content"
                                                         android:id="@+id/tv_pokemonNameDialog"
                                                         android:layout_gravity="start|center_horizontal"
                                                         android:padding="7dp"
                                                         android:gravity="start|center_vertical"
                                                         style="@style/boldText"
                                                         android:layout_column="1"
                                                         android:layout_row="0"
                                                         android:layout_height="wrap_content"
                                                         android:textColor="@color/colorPrimaryDark"
                                                         android:textSize="20sp"/>


            <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llTypes"
                    android:padding="7dp"
                    android:layout_width="80dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"/>


        </GridLayout>


        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorSecondary"
                android:layout_margin="5dp"
                android:elevation="20dp">
            <TableLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewHeaderExtra"
                    android:stretchColumns="0,2">
                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_PokemonHeight"
                            android:gravity="center"
                            android:text="@string/Height"
                            style="@style/boldText"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>

                    <androidx.appcompat.widget.AppCompatTextView
                            android:layout_gravity="center"
                            android:text="@string/Weight"
                            style="@style/boldText"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>


                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_Species"
                            android:layout_gravity="center"
                            android:text="@string/Abilities"
                            style="@style/boldText"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>

                </TableRow>
                <TableRow>

                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_PokemonHeightVal"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"/>


                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_PokemonWeightVal"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"/>


                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvAbilitiesVal"
                            android:layout_gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"/>
                </TableRow>
            </TableLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorSecondary"
                android:layout_margin="5dp"
                android:elevation="20dp">
            <TableLayout
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewHeaderExtra"
                    android:stretchColumns="0">

                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tv_funfact"
                            android:paddingBottom="8dp"
                            android:gravity="start"
                            android:layout_marginStart="20dp"
                            android:text="@string/FunFact"
                            style="@style/boldText"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17sp"/>
                </TableRow>
                <TableRow>
                    <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tcChar"
                            android:gravity="start"
                            android:layout_marginStart="20dp"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="16sp"/>
                </TableRow>


            </TableLayout>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>